@@ -1,5 +1,5 @@
 /*
-** Copyright (C) 2002-2009 Erik de Castro Lopo <erikd@mega-nerd.com>
+** Copyright (C) 2002-2010 Erik de Castro Lopo <erikd@mega-nerd.com>
 **
 ** This program is free software; you can redistribute it and/or modify
 ** it under the terms of the GNU General Public License as published by
@@ -36,19 +36,18 @@ extern "C" {
 
 
 /* Opaque data type SRC_STATE. */
-struct SRC_STATE_tag ;
 typedef struct SRC_STATE_tag SRC_STATE ;
 
 /* SRC_DATA is used to pass data to src_simple() and src_process(). */
 typedef struct
-{	double	src_ratio ;
-
-	float	*data_in, *data_out ;
+{	float	*data_in, *data_out ;
 
 	long	input_frames, output_frames ;
 	long	input_frames_used, output_frames_gen ;
 
 	int		end_of_input ;
+
+	double	src_ratio ;
 } SRC_DATA ;
 
 /* SRC_CB_DATA is used with callback based API. */
